; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rand.c_redisLrand48.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rand.c_redisLrand48.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@x = common dso_local global i32* null, align 8
@N = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redisLrand48() #0 {
  %1 = call i32 (...) @next()
  %2 = load i32*, i32** @x, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 2
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @N, align 4
  %6 = sub nsw i32 %5, 1
  %7 = shl i32 %4, %6
  %8 = load i32*, i32** @x, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 1
  %10 = load i32, i32* %9, align 4
  %11 = ashr i32 %10, 1
  %12 = add nsw i32 %7, %11
  ret i32 %12
}

declare dso_local i32 @next(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
